file structure update
update in file structure

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 /trials/Magnus.py
 /trials/Magnus_beta1.py
 /trials/Straightness.ipynb
+.idea/misc.xml
+.idea/Straightness.iml
+.idea/workspace.xml
+__pycache__/StraightnessCalculator.cpython-37.pyc
+__pycache__/Stiching.cpython-37.pyc
+.idea/workspace.xml
+.idea/Straightness.iml
+.idea/misc.xml
+trials/MOG2.py
+trials/testing.py
